# nb-mongo-adapter

./: Cargo.toml  casbin.mongodb  model.conf
src/: lib.rs
