[package]
name = "nb-mongo-adapter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casbin = { version = "2.0.7", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.4.0", features = ["fs", "io-util"] }
async-trait = "0.1.51"
mongodb = "2.0.0-beta.2"
futures = "0.3.16"
serde = "1.0"
thiserror = "1.0.26"